--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,9 @@ h6,
     font-weight: 500 !important;
 }
 
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+    color: var(--black1) !important;
+}
 
 /*** Gradient Text & BG ***/
 .text-primary-gradient {
